Creation of a new python script for animating the k-means algorithm in a distributed architecture, along with modifications to the Makefile and the data generator script to support the new functionality. Additionally, updates to the README.md to include a visual simulation of the distributed architecture.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ data/*
 
 # PERO mantener el archivo .gitkeep para que suba la carpeta vacía
 !data/.gitkeep
+# Ignorar la carpeta venv/ que contiene el entorno virtual de Python
+venv/
